deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: product-api
  name: product-api
  namespace: product-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
      - image: registry.contour.thewindyvalley.com/library/product-api
        name: product-api
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
