service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product-api
  name: product-api
  namespace: product-api
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: product-api
  type: ClusterIP
